--- a/PrintPass.html
+++ b/PrintPass.html
@@ -41,15 +41,30 @@
 
         </table>
 
-        <div class="button">
-            <button type="submit" onclick="pdf()" style=" margin-top: 50px;">Print
+        <div class="button" id="button">
+            <button type="submit" style=" margin-top: 50px;">Print
                 Receipt</button>
         </div>
 
     </div>
 
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <script src="https://rawgit.com/MrRio/jsPDF/master/dist/jspdf.debug.js"></script>
+    <script src="https://rawgit.com/someatoms/jsPDF-AutoTable/master/dist/jspdf.plugin.autotable.js"></script>
+
+
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/index.d.ts"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
+    <srcipt src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/jspdf.plugin.autotable.js"></srcipt>
+
+    <script src="https://unpkg.com/jspdf"></script>
+    <script src="https://unpkg.com/jspdf-autotable"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script> -->
+
+    <!-- <script src="js/jspdf.es.min.js"></script>
+    <script src="js/jspdf.plugin.autotable.js"></script> -->
     <script src="js/PrintPass.js"></script>
 </body>
 
