--- a/bus_details.html
+++ b/bus_details.html
@@ -81,13 +81,13 @@
 
 
 
-  <div id="delhi" class="site-section" data-aos="fade-up" style="margin-top: 30px; padding-top: 130px;">
+  <div id="delhi" class="site-section" style="margin-top: 30px; padding-top: 130px;">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-6 mb-5 mb-md-0">
+        <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-right">
           <img src="images/delhi.jpg" style=" height: 300px; width: 450px;" alt="Image" class="img-fluid rounded">
         </div>
-        <div class="col-md-6 pl-md-5">
+        <div class="col-md-6 pl-md-5" data-aos="fade-left">
           <h2 class="font-weight-light text-black mb-4" style="text-align: center">Delhi</h2>
           <table style="border-top: solid;">
 
@@ -119,10 +119,10 @@
     </div>
   </div>
 
-  <div id="agra" class="site-section" data-aos="fade-up" style="padding-top: 130px;">
+  <div id="agra" class="site-section" style="padding-top: 130px;">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-6 mb-5 mb-md-0">
+        <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-left">
           <h2 class="font-weight-light text-black mb-4" style="text-align: center">Agra</h2>
           <table style="border-top: solid; color:black; font-size: 1rem;">
 
@@ -149,7 +149,7 @@
 
           </table>
         </div>
-        <div class="col-md-6 pl-md-5">
+        <div class="col-md-6 pl-md-5" data-aos="fade-right">
           <img src="images/agra.jpg" style=" height: 300px; width: 450px;" alt="Image" class="img-fluid rounded">
 
         </div>
@@ -157,14 +157,14 @@
     </div>
   </div>
 
-  <div id="mathura" class="site-section" data-aos="fade-up" style="padding-top: 130px;">
+  <div id="mathura" class="site-section" style="padding-top: 130px;">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-6 mt-5 mb-md-0">
+        <div class="col-md-6 mt-5 mb-md-0" data-aos="fade-right">
           <img src="images/mathura.jpg" style=" height: 300px; width: 450px;" alt="Image" class="img-fluid rounded">
         </div>
         <div class="col-md-6 pl-md-5">
-          <h2 class="font-weight-light text-black mb-4" style="text-align: center">Mathura</h2>
+          <h2 class="font-weight-light text-black mb-4" style="text-align: center" data-aos="fade-left">Mathura</h2>
           <table style="border-top: solid;">
 
             <tr>
@@ -195,10 +195,10 @@
     </div>
   </div>
 
-  <div id="vrindavan" class="site-section" data-aos="fade-up" style="padding-top: 130px;">
+  <div id="vrindavan" class="site-section" style="padding-top: 130px;">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-6 mb-5 mb-md-0">
+        <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-left">
           <h2 class="font-weight-light text-black mb-4" style="text-align: center">Vrindavan</h2>
           <table style="border-top: solid; color:black; font-size: 1rem;">
 
@@ -226,21 +226,22 @@
           </table>
         </div>
         <div class="col-md-6 pl-md-5">
-          <img src="images/vrindawan.jpg" style=" height: 300px; width: 450px;" alt="Image" class="img-fluid rounded">
+          <img src="images/vrindawan.jpg" data-aos="fade-right" style=" height: 300px; width: 450px;" alt="Image"
+            class="img-fluid rounded">
 
         </div>
       </div>
     </div>
   </div>
 
-  <div id="barsana" class="site-section" data-aos="fade-up" style="padding-top: 130px;">
+  <div id="barsana" class="site-section" style="padding-top: 130px;">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-6 mb-5 mb-md-0">
+        <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-right">
           <img src="images/barsana.jpg" style=" height: 300px; width: 450px;" alt="Image" class="img-fluid rounded">
         </div>
         <div class="col-md-6 pl-md-5">
-          <h2 class="font-weight-light text-black mb-4" style="text-align: center">Barsana</h2>
+          <h2 class="font-weight-light text-black mb-4" data-aos="fade-left" style="text-align: center">Barsana</h2>
           <table style="border-top: solid;">
 
             <tr>
@@ -271,10 +272,10 @@
     </div>
   </div>
 
-  <div id="chaumuhan" class="site-section" data-aos="fade-up" style="margin-bottom: 30px;" style="padding-top: 130px;">
+  <div id="chaumuhan" class="site-section" style="margin-bottom: 30px;" style="padding-top: 130px;">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-6 mb-5 mb-md-0 ">
+        <div class="col-md-6 mb-5 mb-md-0 " data-aos="fade-left">
           <h2 class="font-weight-light text-black mb-4" style="text-align: center">Chaumuhan</h2>
           <table style="border-top: solid; color:black; font-size: 1rem;">
 
@@ -302,7 +303,8 @@
           </table>
         </div>
         <div class="col-md-6 pl-md-5">
-          <img src="images/chamuhun.jpg" style=" height: 300px; width: 450px;" alt="Image" class="img-fluid rounded">
+          <img src="images/chamuhun.jpg" data-aos="fade-right" style=" height: 300px; width: 450px;" alt="Image"
+            class="img-fluid rounded">
 
         </div>
       </div>
