--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-7">
-                    <h1 class="heading margin-bottom: 80px" data-aos="fade-right">Our Destinations</h1>
+                    <h1 class="heading margin-bottom: 80px" data-aos="flip-left">Our Destinations</h1>
 
                     <hr data-aos="fade-right" data-aos-delay="500" style="height: 1.5px;">
                     <div class="subheading">Choose Your Next Destination <img class="ml-1 bus" data-aos="fade-right"
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="flip-left" data-aos-duration="1000">
                     <a href="#" class="unit-1 text-center">
                         <img src="images/delhi.jpg" alt="Image" class="img-fluid" style="height: 200px">
                         <div class="unit-1-text">
@@ -115,7 +115,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="flip-down" data-aos-duration="800">
                     <a href="#" class="unit-1 text-center">
                         <img src="images/agra.jpg" alt="Image" class="img-fluid" style="height: 200px">
                         <div class="unit-1-text">
@@ -123,7 +123,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="flip-right" data-aos-duration="1000">
                     <a href="#" class="unit-1 text-center">
                         <img src="images/mathura.jpg" alt="Image" class="img-fluid" style="height: 200px">
                         <div class="unit-1-text">
@@ -132,7 +132,7 @@
                     </a>
                 </div>
 
-                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="flip-left" data-aos-duration="1000">
                     <a href="#" class="unit-1 text-center">
                         <img src="images/vrindawan.jpg" alt="Image" class="img-fluid" style="height: 200px">
                         <div class="unit-1-text">
@@ -140,7 +140,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="flip-up" data-aos-duration="800">
                     <a href="#" class="unit-1 text-center">
                         <img src="images/barsana.jpg" alt="Image" class="img-fluid" style="height: 200px">
                         <div class="unit-1-text">
@@ -148,7 +148,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="flip-right" data-aos-duration="1000">
                     <a href="#" class="unit-1 text-center">
                         <img src="images/chamuhun.jpg" alt="Image" class="img-fluid" style="height: 200px">
                         <div class="unit-1-text">
@@ -175,7 +175,7 @@
             <div class="container ">
                 <div class="row">
                     <div class="col-lg-1"></div>
-                    <div class="col-md-6 col-lg-5 mb-6 mb-lg-0">
+                    <div class="col-md-6 col-lg-5 mb-6 mb-lg-0" data-aos="zoom-in-right">
                         <a href="#" class="unit-1 text-center">
                             <img src="images/img1.jpg" alt="Image" class="img-fluid" style="height: 353px">
                             <div class="unit-1-text">
@@ -183,7 +183,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-md-6 col-lg-5 mb-6 mb-lg-0">
+                    <div class="col-md-6 col-lg-5 mb-6 mb-lg-0" data-aos="zoom-in-left">
                         <a href="#" class="unit-1 text-center">
                             <img src="images/img2.jpeg" alt="Image" class="img-fluid" style="height: 353px">
                             <div class="unit-1-text">
