--- a/PrintPass.html
+++ b/PrintPass.html
@@ -13,7 +13,8 @@
 <body>
     <div class="container">
         <table id="table">
-            <th colspan="2">Pass Receipt</th>
+            <th>Properties</th>
+            <th>Value</th>
             <tr>
                 <td>Name</td>
                 <td id="name"></td>
