--- a/PrintPass.html
+++ b/PrintPass.html
@@ -43,17 +43,17 @@
         </table>
 
         <div class="button">
-            <button type="submit" id="button" style=" margin-top: 50px;">Print
+            <button type="submit" id="pdf" style=" margin-top: 50px;">Print
         </div>
 
     </div>
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <script src="https://rawgit.com/MrRio/jsPDF/master/dist/jspdf.debug.js"></script>
     <script src="https://rawgit.com/someatoms/jsPDF-AutoTable/master/dist/jspdf.plugin.autotable.js"></script>
-
+ -->
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/index.d.ts"></script>
