--- a/Payment.html
+++ b/Payment.html
@@ -6,26 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Pass</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/Payment.css">
-    <!-- <link rel="stylesheet" href="css/bus.css"> -->
+    <link rel="stylesheet" href="css/Form.css">
+
 </head>
 
 <body>
 
-    <div class="site-blocks-cover" style="background-image: url(images/formbg.jpeg); height: 766px; width: 1519px"
+    <div class="site-blocks-cover" style="background-image: url(images/formbg.jpeg); height: 764px; width: 98.5vw"
         data-aos="fade" data-stellar-background-ratio="0.5">
+        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
+                style="width: 70px; padding-left: 10px; padding-top: 10px;"></a>
 
         <div class="container">
             <div class="row justify-align-center align-items-center">
-                <div class="col-lg-12 col-md-6 ">
+                <div class="col">
                     <div class="header">
                         <h2>PAYMENT</h2>
                     </div>
                     <form class="form" id="form">
                         <div class="form-control">
                             <label for="email">Card</label>
-                            <a href=""><img src="images/visa.png" style="width: 70px;" alt=""></a>
-                            <a href=""><img src="images/mastercard.png" style="width: 80px;" alt=""></a>
+                            <a href=""><img src="images/visa.png" style="width: 70px; margin-bottom: 5px;" alt=""></a>
+                            <a href=""><img src="images/mastercard.png" style="width: 80px; margin-bottom: 5px;"
+                                    alt=""></a>
                             <small></small>
                         </div>
 
@@ -33,7 +36,7 @@
                             <label for="payment">Payment</label>
                             <div id="payment"
                                 style="display: block; width: 100%; padding: 10px; border-radius: 5px; outline: none; border: 2px solid #f0f0f0;">
-                                Rs 2000</div>
+                            </div>
                             <small></small>
                         </div>
 
@@ -81,7 +84,6 @@
     </div>
 
 
-    <!-- onclick="createPDF()" -->
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
