--- a/Payment.html
+++ b/Payment.html
@@ -35,7 +35,7 @@
                         <div class="form-control">
                             <label for="payment">Payment</label>
                             <div id="payment"
-                                style="display: block; width: 100%; padding: 10px; border-radius: 5px; outline: none; border: 2px solid #f0f0f0;">
+                                style="display: block; height: 43px; width: 100%; padding: 10px; border-radius: 5px; outline: none; border: 2px solid #f0f0f0;">
                             </div>
                             <small></small>
                         </div>
