--- a/bus_details.html
+++ b/bus_details.html
@@ -49,7 +49,7 @@
   </div>
 
   <nav class="navbar navbar-light navbar-expand-xl fixed-top" style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
-    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
+    <a class="navbar-brand" href="/"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
         style="max-width: 70px; padding-left: 10px;"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +69,7 @@
             <span class="mx-2 text-white">&bullet;</span>
             <a href="about.html" style="color: rgb(236, 234, 234);">About</a>
             <span class="mx-2 text-white">&bullet;</span>
-            <a href="form.html" style="color: rgb(236, 234, 234);">Manage Pass</a>
+            <a href="Form.html" style="color: rgb(236, 234, 234);">Manage Pass</a>
 
           </div>
         </div>
