--- a/Payment.html
+++ b/Payment.html
@@ -12,12 +12,10 @@
 
 <body>
 
-    <div class="site-blocks-cover" style="background-image: url(images/formbg.jpeg); height: 764px; width: 98.5vw"
+    <div class="site-blocks-cover" style="background-image: url(images/formbg.jpeg); height: 900px; width: 98.9vw"
         data-aos="fade" data-stellar-background-ratio="0.5">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
-                style="width: 70px; padding-left: 10px; padding-top: 10px;"></a>
 
-        <div class="container">
+        <div class="container" style="height: 770px; margin-top: 50px;">
             <div class="row justify-align-center align-items-center">
                 <div class="col">
                     <div class="header">
