--- a/PrintPass.html
+++ b/PrintPass.html
@@ -13,8 +13,7 @@
 <body>
     <div class="container">
         <table id="table">
-            <th>Properties</th>
-            <th>Value</th>
+            <th colspan="2" style="font-size: 15px; text-decoration: underline;">Bus Pass Receipt</th>
             <tr>
                 <td>Name</td>
                 <td id="name"></td>
