--- a/PrintPass.html
+++ b/PrintPass.html
@@ -42,7 +42,7 @@
         </table>
 
         <div class="button">
-            <button type="submit" id="pdf" style=" margin-top: 50px;">Print
+            <button type="submit" id="pdf" style=" margin-top: 50px;">Download
         </div>
 
     </div>
