--- a/Form.html
+++ b/Form.html
@@ -19,7 +19,7 @@
 
     <div class="site-blocks-cover" style="background-image: url(images/formbg.jpeg); height: 764px; width: 98.5vw"
         data-aos="fade" data-stellar-background-ratio="0.5">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
+        <a class="navbar-brand" href="/"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
                 style="width: 70px; padding-left: 10px; padding-top: 10px;"></a>
 
         <div class="container">
