--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 
     <nav class="navbar navbar-light navbar-expand-xl fixed-top"
       style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
-      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
+      <a class="navbar-brand" href="/"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
           style="max-width: 70px; padding-left: 10px;"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -118,11 +118,11 @@
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
             <h1 class="text-white" style=" font-weight: 500; font-size: 80px;">Get In Touch</h1>
             <div style="font-size: 17px;">
-              <a href="index.html" style="color: rgb(236, 234, 234);">Home</a>
+              <a href="/" style="color: rgb(236, 234, 234);">Home</a>
               <span class="mx-2 text-white">&bullet;</span>
-              <a href="index.html" style="color: rgb(236, 234, 234);">Manage Pass</a>
+              <a href="Form.html" style="color: rgb(236, 234, 234);">Manage Pass</a>
               <span class="mx-2 text-white">&bullet;</span>
-              <a href="index.html" style="color: rgb(236, 234, 234);">Bus Details</a>
+              <a href="bus_details.html" style="color: rgb(236, 234, 234);">Bus Details</a>
             </div>
 
           </div>
@@ -222,7 +222,7 @@
 
             <ul class="list-unstyled">
               <li>
-                <i class="fa fa-home"> </i><a href="index.html"> Home</a>
+                <i class="fa fa-home"> </i><a href="/"> Home</a>
               </li>
               <li>
                 <i class="fa fa-bus"> </i><a href="about.html"> About</a>
@@ -250,7 +250,7 @@
 
 
       <div class="footer-copyright text-center py-3">
-        <p>Copyright © 2020 All Rights Reserved by <a href="#" target="_blank">Bus Pas</a></p>
+        <p>Copyright © 2020 All Rights Reserved by <a href="#">Bus Pass</a></p>
       </div>
     </footer>
     <!-- Footer -->
