--- a/bus_details.html
+++ b/bus_details.html
@@ -387,7 +387,7 @@
 
           <ul class="list-unstyled">
             <li>
-              <i class="fa fa-home"> </i><a href="index.html"> Home</a>
+              <i class="fa fa-home"> </i><a href="/"> Home</a>
             </li>
             <li>
               <i class="fa fa-bus"> </i><a href="about.html"> About</a>
