--- a/index.html
+++ b/index.html
@@ -97,19 +97,20 @@
     <div class="site-section p-0">
 
         <div class="container">
-            <div class="row mb-5">
+            <div class="row mb-5" style=" margin-left: 30px; margin-right: 30px;">
                 <div class="col-md-7">
-                    <h1 class="heading margin-bottom: 80px" data-aos="flip-left">Our Destinations</h1>
+                    <h2 class="heading " data-aos="flip-left">Our
+                        Destinations</h2>
 
                     <hr data-aos="fade-right" data-aos-delay="500" style="height: 1.5px;">
-                    <div class="subheading">Choose Your Next Destination <img class="ml-1 bus" data-aos="fade-right"
-                            src="images/travel.png" style="max-width: 90px;"></div>
+                    <div class="subheading">Choose Your Next Destination <img class="ml-1 bus d-none d-lg-inline-block"
+                            data-aos="fade-right" src="images/travel.png" style="max-width: 90px;"></div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" style="margin-left: 30px; margin-right: 30px;">
                 <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="flip-left" data-aos-duration="1000">
                     <a href="#" class="unit-1 text-center">
-                        <img src="images/delhi.jpg" alt="Image" class="img-fluid" style="height: 200px">
+                        <img src="images/delhi.jpg" alt="Image" class="img-fluid " style="height: 200px">
                         <div class="unit-1-text">
                             <h3 class="unit-1-heading">Delhi</h3>
                         </div>
@@ -164,41 +165,43 @@
 
 
 
-    <div class="site-section">
+    <div class="site-section mt-5">
         <div class="container">
             <div class="row  mb-5">
-                <div class="col-md-7 " style="margin-bottom: 80px;">
-                    <h1 class="heading" data-aos="fade-right">TEAM</h1>
+                <div class="col-md-7 " style=" margin-left: 30px; margin-right: 30px; margin-bottom: 80px;">
+                    <h2 class="heading" data-aos="fade-right">TEAM</h2>
                     <hr data-aos="fade-right" data-aos-delay="500" style="height: 1.5px; width: 40%">
                 </div>
             </div>
             <div class="container ">
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-md-6 col-lg-5 mb-6 mb-lg-0" data-aos="zoom-in-right">
+                <div class="row justify-content-center align-items-center">
+                    <!-- <div class=" col-lg-1"></div> -->
+                    <div class="col-md-6 col-lg-5 mb-6 mb-lg-0" data-aos="zoom-in-right"
+                        style="margin-top: 20px;  margin-left: 20px; margin-right: 20px;">
                         <a href="#" class="unit-1 text-center">
-                            <img src="images/img1.jpg" alt="Image" class="img-fluid" style="height: 353px">
+                            <img src="images/img1.jpg" alt="Image" class="img-fluid px-4" style="height: 350px">
                             <div class="unit-1-text">
                                 <h3 class="unit-1-heading">Riya Gaur</h3>
                             </div>
                         </a>
                     </div>
-                    <div class="col-md-6 col-lg-5 mb-6 mb-lg-0" data-aos="zoom-in-left">
+                    <div class="col-md-6 col-lg-5 mb-6 mb-lg-0" data-aos="zoom-in-left"
+                        style="margin-top: 20px; margin-left: 20px;  margin-right: 20px">
                         <a href="#" class="unit-1 text-center">
-                            <img src="images/img2.jpeg" alt="Image" class="img-fluid" style="height: 353px">
+                            <img src="images/img2.jpeg" alt="Image" class="img-fluid" style="height: 350px">
                             <div class="unit-1-text">
                                 <h3 class="unit-1-heading">Sameeksha Rathi</h3>
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-1"></div>
+                    <!-- <div class="col-lg-1"></div> -->
                 </div>
             </div>
         </div>
     </div>
 
 
-    <div class="site-section p-0 mt-5">
+    <div class="site-section pt-4 mt-5">
         <div class="container">
             <div class="row text-center book">
                 <div class="col-md-12">
@@ -212,7 +215,7 @@
     </div>
 
 
-    <img class="ml-1 bus" data-aos="fade-right" src="images/travel.png" style="max-width: 150px;">
+    <img class="ml-1 bus " data-aos="fade-right" src="images/travel.png" style="max-width: 150px;">
 
 
     <!-- <section class="footer">
