--- a/Payment.html
+++ b/Payment.html
@@ -56,7 +56,7 @@
 
                         <div class="form-control">
                             <label for="expdate">Expire Month</label>
-                            <input type="month" id="expdate">
+                            <input type="text" id="expdate" placeholder="mm/yyyy">
                             <i class="fa fa-check-circle"></i>
                             <i class="fa fa-exclamation-circle"></i>
                             <small>Error msg</small>
