--- a/Form.html
+++ b/Form.html
@@ -22,7 +22,7 @@
         <a class="navbar-brand" href="/"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
                 style="width: 70px; padding-left: 10px; padding-top: 10px;"></a>
 
-        <div class="container">
+        <div class="container" style="margin-top: 20px;">
             <div class="row justify-align-center align-items-center">
                 <div class="col">
                     <div class="header">
