--- a/about.html
+++ b/about.html
@@ -51,10 +51,10 @@
       style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
       <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
           style="max-width: 70px; padding-left: 10px;"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </button> -->
     </nav>
     <!-- <header class="site-navbar py-1" role="banner">
 
