--- a/bus_details.html
+++ b/bus_details.html
@@ -55,10 +55,10 @@
   <nav class="navbar navbar-light navbar-expand-xl fixed-top" style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
     <a class="navbar-brand" href="/"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
         style="max-width: 70px; padding-left: 10px;"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
   </nav>
 
   <div class="site-blocks-cover inner-page-cover" style="background-image: url(images/bgimg.jpeg); height: 760px; "
@@ -85,10 +85,9 @@
 
 
 
-  <div id="delhi" class="site-section"
-    style="margin-top: 30px; padding-top: 130px; margin-left: 30px; margin-right: 30px;">
+  <div id="delhi" class="site-section " style="margin-top: 30px; padding-top: 130px;  margin-left: 60px;">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row justify-content-center align-items-center">
         <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-right">
           <img src="images/delhi.jpg" style="height: 250px; width: 400px;" alt="Image" class="img-fluid rounded">
         </div>
@@ -124,7 +123,7 @@
     </div>
   </div>
 
-  <div id="agra" class="site-section" style="padding-top: 130px; margin-left: 30px; margin-right: 30px;">
+  <div id="agra" class="site-section" style="padding-top: 130px; margin-left: 60px;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 mb-5 mb-md-0 order-2 order-md-1 mt-5" data-aos="fade-left">
@@ -162,7 +161,7 @@
     </div>
   </div>
 
-  <div id="mathura" class="site-section" style="padding-top: 130px; margin-left: 30px; margin-right: 30px;">
+  <div id="mathura" class="site-section" style="padding-top: 130px; margin-left: 60px;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 mt-5 mb-md-0" data-aos="fade-right">
@@ -200,7 +199,7 @@
     </div>
   </div>
 
-  <div id="vrindavan" class="site-section" style="padding-top: 130px; margin-left: 30px; margin-right: 30px;">
+  <div id="vrindavan" class="site-section" style="padding-top: 130px; margin-left: 60px;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 mb-5 mb-md-0 order-2 order-md-1 mt-5" data-aos="fade-left">
@@ -239,7 +238,7 @@
     </div>
   </div>
 
-  <div id="barsana" class="site-section" style="padding-top: 130px; margin-left: 30px; margin-right: 30px;">
+  <div id="barsana" class="site-section" style="padding-top: 130px; margin-left: 60px;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-right">
@@ -277,8 +276,7 @@
     </div>
   </div>
 
-  <div id="chaumuhan" class="site-section"
-    style="margin-bottom: 30px; padding-top: 130px; margin-left: 30px; margin-right: 30px;">
+  <div id="chaumuhan" class="site-section" style="margin-bottom: 30px; padding-top: 130px; margin-left: 60px;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 mb-5 mb-md-0 order-2 order-md-1 mt-5" data-aos="fade-left">
