--- a/contact.html
+++ b/contact.html
@@ -80,10 +80,10 @@
       style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
       <a class="navbar-brand" href="/"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
           style="max-width: 70px; padding-left: 10px;"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </button> -->
 
       <!-- <div class="collapse navbar-collapse" id="navLinks">
         <ul class="navbar-nav margin" style="padding-right: 50px;">
