--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
     </div>
 
 
-    <div class="site-section pt-4 mt-5">
+    <div class="site-section pt-4 mt-5 border-top">
         <div class="container">
             <div class="row text-center book">
                 <div class="col-md-12">
                     <h2 class="text-black" style="font-size: 20px;">Want To Travel With Us?</h2>
                     <hr class=" hr-travel" data-aos="fade" data-aos-delay="200">
-                    <p class="mb-5"><a href="Form.html" class="btn btn-primary py-2 px-3 text-white">Book Now</a>
+                    <p class="mb-4"><a href="Form.html" class="btn btn-primary py-2 px-3 text-white">Book Now</a>
                     </p>
                 </div>
             </div>
