--- a/Form.html
+++ b/Form.html
@@ -46,6 +46,14 @@
                         </div>
 
                         <div class="form-control">
+                            <label for="password">Password</label>
+                            <input type="text" id="password" placeholder="Choose Password">
+                            <i class="fa fa-check-circle"></i>
+                            <i class="fa fa-exclamation-circle"></i>
+                            <small></small>
+                        </div>
+
+                        <div class="form-control">
                             <label for="mob">Mobile Number</label>
                             <input type="text" id="mob" placeholder="Enter Mobile Number">
                             <i class="fa fa-check-circle"></i>
