--- a/PrintPass.html
+++ b/PrintPass.html
@@ -12,8 +12,10 @@
 
 <body>
     <div class="container">
+        <h2 style="text-decoration: underline; text-align: center;">Bus Pass</h2>
         <table id="table">
-            <th colspan="2" style="font-size: 25px; text-decoration: underline;">Bus Pass Receipt</th>
+            <th style="visibility:hidden;">#</th>
+            <th style="visibility:hidden;">Values</th>
             <tr>
                 <td>Name</td>
                 <td id="name"></td>
